# telegram-collector

./: .gitignore  Cargo.toml
examples/: main.rs
src/: config.rs  error.rs  lib.rs  result.rs  tg_client.rs  traits.rs  types.rs
src/parsers/: default.rs  mod.rs
