[package]
name = "tg-collector"
version = "0.1.0"
authors = ["Антон Спицын <a.spitsin@softpro.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-client = { path = "../../telegram-client"}
rtdlib = { path = "../../rtdlib", features = [ "sys" ] }
futures = "0.3.7"
futures-util = "0.3.7"
log = "0.4"

[dev-dependencies]
tokio = {version = "0.3.0", features = ["full"]}
chrono = "0.4.19"
simple_logger = "1.3"
